--- a/proyectoeze/src/components/Item/Item.css
+++ b/proyectoeze/src/components/Item/Item.css
@@ -1,10 +1,19 @@
-img{
-    height: 200px;
-    width: 200px;
-}
-
 .Item{
+    margin: 20px;
     padding: 10px;
     text-align: center;
+    text-decoration: none;
     font-size: 15px;
+    color: black;
+}
+
+img{
+    height: 300px;
+    width: 275px;
+    padding: 10px;
+}
+
+img:hover{
+    transform: scale(0.9);
+    transition: all 0.8s;
 }
